New location for unzipped content